More overflow fixing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,12 +8,14 @@
   body {
     background-image: linear-gradient( #020922, #2a273f); 
     overscroll-behavior: none;
-    height: 100%;
-    width: 100%;
-    margin-bottom: 0%;
-  }
-  #__next {
-        background-image: linear-gradient( #020922, #2a273f); 
-  height: 100vh;
-    }
+   }
+
+     html,
+      body,
+      body > div:first-child,
+      div#__next,
+      div#__next > div {
+        height: 100%;
+        background-color: #020922;
+      }
 }
